# nba-inves-classifier

./: README.md  pyproject.toml
data/train/: test.csv  train.csv
model/1/: MYMODEL.pkl
src/: EDA.ipynb  TRAIN.ipynb  app.py  config.py  model.py  preprocess.py  train.py
