[tool.poetry]
name = "nba-inves-classifier"
version = "0.1.0"
description = ""
authors = ["saadbouhya <bouhyasaad@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pydantic = "^2.7.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
pydantic-settings = "^2.3.3"
imblearn = "^0.0"
xgboost = "^2.0.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = [
    "tests"
]
